why 80 is not showing

--- a/Lab2.Rmd
+++ b/Lab2.Rmd
@@ -45,7 +45,8 @@ ggplot(slamecka_design,aes(x=number_of_IL,
              fun = "mean",)+
   scale_shape_manual(values=c(1,8,3))+
   scale_y_continuous(name="Number of words correct",
-                     breaks = c(0,20,40,60,80))+
+                     breaks = c(20,40,60),
+                      limits = c(0,80))+
   scale_x_continuous(name="Number of interpolated lists",
                      breaks = c(2,4,8))+
   theme_classic()
