--- a/Lab2.Rmd
+++ b/Lab2.Rmd
@@ -65,5 +65,9 @@ Independence:
 ```{r}
 library(tibble)
 
-new_data<-tibble(reward=rep(c("0","50","1000000"),each=9))
-new_data
+new_data<-tibble(practice=rep(c("2","4","8"),times=9),
+                 distraction=rep(rep(c("0","4","8"),each=3),3),
+                 reward=rep(c("0","50","1000000"),each=9))
+                 
+```
+
