--- a/Lab2.Rmd
+++ b/Lab2.Rmd
@@ -67,7 +67,8 @@ library(tibble)
 
 new_data<-tibble(practice=rep(c("2","4","8"),times=9),
                  distraction=rep(rep(c("0","4","8"),each=3),3),
-                 reward=rep(c("0","50","1000000"),each=9))
+                 reward=rep(c("0","50","1000000"),each=9),
+                 recall=c())
                  
 ```
 
