--- a/Lab2.Rmd
+++ b/Lab2.Rmd
@@ -66,20 +66,30 @@ Independence:
 library(tibble)
 library(ggplot2)
 
-new_data<-tibble(practice=rep(rep(c("2","4","8"),each=3),3),
-                 distraction=rep(c("0","4","8"),times=9),
+new_data<-tibble(practice=rep(rep(c(2,4,8),each=3),3),
+                 distraction=as.factor(rep(c(0,4,8),times=9)),
                  reward=rep(c("0","50","1000000"),each=9),
                  recall=c(5,3,1,6,4,2,7,5,3,
-                          8,6,4,10,8,6,12,10,8,
-                          15,10,6,18,13,8,22,16,12))
+                          10,8,6,11,9,7,12,10,8,
+                          15,13,11,16,14,12,17,15,13))
+
+new_data$reward_c<-factor(new_data$reward,
+                         levels=c("0","50","1000000"))
 
 ggplot(new_data,aes(x=practice,
                     y=recall,
-                    group=distraction))+
-  geom_line(stat="summary",fun="mean")+
-  geom_point(stat="summary",fun="mean")+
+                    group=distraction,
+                    shape=distraction))+
+  geom_line(aes(colour=distraction,
+                group=distraction))+
+  geom_point()+
+  xlab("Amount of practice")+
+  ylab("Recall")+
+  scale_y_continuous(breaks = c(0,5,10,15,20),
+                     limits = c(0,20))+
+  scale_x_continuous(breaks = c(2,4,8))+
   theme_classic()+
-  facet_wrap(~reward)
-                 
+  facet_wrap(~reward_c)
+
 ```
 
