--- a/Lab2.Rmd
+++ b/Lab2.Rmd
@@ -60,7 +60,7 @@ Imagine Slamecka had included a third independent variable that also had three l
 
 Use R to create a dataframe to represent predictions for this new 3x3x3 design. Then use ggplot and facet wrapping to show predicted means for each condition. As a hint, I have provided a drawing and I expect your ggplot graph will look something like this drawing.
 
-Independence:
+Independence: 70
 
 ```{r}
 library(tibble)
