--- a/Lab6.Rmd
+++ b/Lab6.Rmd
@@ -15,25 +15,30 @@ Independence:10
 ```{r}
 #repeat experiment 20 times
 
-A<-replicate(10000,sum(rbinom(20,1,p=.05)))
+A<-replicate(10000,sum(rbinom(n=20,size=1,p=.05)))
 length(A[A>0])/10000
 
 #repeat experiment 50 times
 
-B<-replicate(10000,sum(rbinom(50,1,p=.05)))
+B<-replicate(10000,sum(rbinom(n=50,size=1,p=.05)))
 length(B[B>0])/10000
 ```
 
 b. If the ineffectual experiment was conducted 20 times, and there were four groups, and the experimenter would accept a significant result from any of the orthogonal linear contrasts, what would be the probability of finding a significant result here? (1 point)
-Independence:0
+Independence:50
 ```{r}
-  
+C<-replicate(10000,sum(rbinom(n=20,size=3,p=.05))) 
+length(C[C>0])/10000
+
 ```
-
-
 The next two questions draw a connection to a technique we have not yet discussed called p-curve analysis (Simonsohn et al., 2014; Wallis, 1942). P-curve analysis is sometimes used for purposes of meta-analyses to determine whether there is “good” evidence for an effect in the literature.
 
 2. Consider that a researcher publishes a study showing a significant effect, p <. 05; but, in reality the researcher makes a type I error, and the manipulation did not cause any difference. If many other researchers replicated the study, what kind of p-values would they find? Use R to create a sampling distribution of p-values that would be expected in this situation. What shape does this distribution have? (2 points)
+Independence:
+```{r}
+
+```
+
 
 3. Now assume that the published result reflects a true effect. Specifically, let’s imagine the study had two groups (between-subjects), with 20 subjects in each group. Assume that scores for subjects are all sampled from a normal distribution, and that group A has larger mean than group B by .5 standard deviations (e.g., Cohen’s d = .5). If many other researchers replicated the study, what kind of p-values would they find? Use R to create a sampling distribution of p-values that would be expected in this situation. What shape does this distribution have? (2 points)
 
