--- a/Lab7.Rmd
+++ b/Lab7.Rmd
@@ -9,60 +9,72 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 1. Explain the concept of main effects and interactions with an example using R. For example, this could include a definition of main effects and interactions and a figure depicting main effects and an interaction along with an explanation of the patterns for each. A major point of this problem is for you to to engage in the task of developing an explanation of these concepts that would 1) be helpful for you to understand the concepts, and 2) could be helpful for others to understand these concepts. (3 points)
-Confidence: 
+Independence: 90
 
-Definitions:
-Main effect is observed when the value of the dependent variable vary across levels of a single independent variable. Whether such change in measures are caused by the independent variable or occurred by chance should be tested.
-Interaction occurs when the effect of one variable changes across levels of another variable.  In other words, interaction of two independent variables changes the expected main effect of factors. 
+#Definitions:
+A main effect is an effect of one independent variable on the dependent variable, while ignoring the effects of the other variable. Therefore, an overall effect of one independent variable is averaged across all the other variables. 
+
+An Interaction occurs when the effect of one variable changes across the levels of the other independent variable. If there is an interaction, the effect of one independent variable changes as a function of the levels of the other independent variable.    
 ```{r}
-#load libraries
+# load libraries
 library(dplyr)
 library(ggplot2)
 library(patchwork)
 
-# simulated data (pretend running an experiment)
-n <- 10
-factorial_data <- tibble(A = factor(rep(c("A1","A2"), each = n)),
-                         B = factor(rep(c("B1","B2"), n)),
-                         DV = rnorm(n*2,0,1))
+#fake data of 100m sprint time
+a1b1 <- c(11,10,10,9,10)
+a1b2 <- c(10,10,11,11,11)
+a2b1 <- c(14,16,15,16,17)
+a2b2 <- c(13,18,16,15,15)
 
-# look at plots of the main effects and interaction
+sprint_data <- tibble(spr_time = c(a1b1,a1b2,a2b1,a2b2),
+                      A = rep(c("athlete","non-athlete"), each = 10),
+                      B = rep(c("nike","adidas"),times=10)
+                      )
 
-A <- factorial_data %>%
+# plots of the main effects and interaction
+
+A <- sprint_data %>%
   group_by(A) %>%
-  summarise(mean_DV = mean(DV)) %>%
+  summarise(mean_DV = mean(spr_time)) %>%
   ggplot(aes(y=mean_DV, x=A))+
    geom_bar(stat="identity", position="dodge") +
    ggtitle("Main effect A")
 
-B <- factorial_data %>%
+B <- sprint_data %>%
   group_by(B) %>%
-  summarise(mean_DV = mean(DV)) %>%
+  summarise(mean_DV = mean(spr_time)) %>%
   ggplot(aes(y=mean_DV, x=B))+
    geom_bar(stat="identity", position="dodge")+
    ggtitle("Main effect B")
 
-AB <- factorial_data %>%
+AB <- sprint_data %>%
   group_by(A,B) %>%
-  summarise(mean_DV = mean(DV)) %>%
+  summarise(mean_DV = mean(spr_time)) %>%
   ggplot(aes(y=mean_DV, x=A, fill=B))+
    geom_bar(stat="identity", position="dodge")+
    ggtitle("AxB Interaction")
 
 # patchwork formula
 A+B+AB
+
+#get means
+aov_out<-aov(spr_time~A*B, sprint_data)
+print(model.tables(aov_out,"means"),format="markdown")
 ```
+#Explanation of the patterns
+The data shows that there was a main effect of being an athlete.  Mean sprint_time was faster for athletes(10.3 secs)than non-athletes (15.5 secs).  Based upon the observation of the main effect measures, there is a little or no effect of wearing Adidas (12.7 secs) or Nike shoes (13.1).  There was no interaction between being an athlete and shoe brand. The effect of being an athlete did not change as a function of what shoe brand people wore. This means it doesn't matter whether an athlete or a non-athlete wears which brand shoes; they perform their normal regardless of what shoes they wear.
+
+
 
 2. Complete the 2x2 factorial lab found here https://crumplab.github.io/statisticsLab/lab-10-factorial-anova.html, up to section 10.4.8. More specifically, your task is to follow that lab exercise to load in the data, transform the data into long-format, conduct a 2x2 between subjects ANOVA, and write a short results section reporting the main effects and interaction. (3 points)
-Confidence:
+Independence: 90
 ```{r}
 #load in the data
 library(data.table)
 all_data<-fread("data/stroop_stand.csv") 
 
 #transform data into long-format
-library(summarytools)
-view(dfSummary(all_data))
 
 RTs<-c(as.numeric(unlist(all_data[,1])),
        as.numeric(unlist(all_data[,2])),
@@ -79,7 +91,6 @@ stroop_df<-data.frame(Subject, Congruency, Posture, RTs)
 hist(stroop_df$RTs)
 
 #conduct a 2X2 between subjects ANOVA
-library(xtable)
 
 aov_out<-aov(RTs~Congruency*Posture, stroop_df)
 summary_out<-summary(aov_out)
@@ -87,9 +98,8 @@ summary_out<-summary(aov_out)
 library(xtable)
 knitr::kable(xtable(summary_out))
 
-#write a short results section reporting the main effects and interaction
+#get means and write a short results section reporting the main effects and interaction
 print(model.tables(aov_out,"means"),format="markdown")
-
 ```
 #Report the main effects and interaction
 There was a main effect of Congruency, F(1,196)=43.73, MSE=13189.19, p<0.001.  Mean reaction times were slower for incongruent (922.3ms) than congruent (814.9) groups.
@@ -99,4 +109,102 @@ The main effect of Posture was not significant, F(1,196)=2.45, MSE=13189.19, p=0
 The two-way interaction between Congruency and Posture was not significant, F(1,196)=0.497, MSE=13189.19, p<0.481.
 
 
+
+3. In chapter 10 of Crump et al. (2018), there is a discussion of patterns of main effects and interactions that can occur in a 2x2 design, which represents perhaps the simplest factorial design. There are 8 possible outcomes discussed https://crumplab.github.io/statistics/more-on-factorial-designs.html#looking-at-main-effects-and-interactions. Examples of these 8 outcomes are shown in two figures, one with bar graphs, and one with line graphs. Reproduce either of these figures using ggplot2. (3 points)
+Independence: 10
+```{r}
+#data for 8 possibilities
+g1 <- data.frame(IV1=c("A","A","B","B"),
+                 IV2=c("1","2","1","2"),
+                 means=c(5,5,5,5))
+
+g2 <- data.frame(IV1=c("A","A","B","B"),
+                 IV2=c("1","2","1","2"),
+                 means=c(10,10,5,5))
+
+g3 <- data.frame(IV1=c("A","A","B","B"),
+                 IV2=c("1","2","1","2"),
+                 means=c(10,13,5,2))
+
+g4 <- data.frame(IV1=c("A","A","B","B"),
+                 IV2=c("1","2","1","2"),
+                 means=c(5,10,10,15))
+
+g5 <- data.frame(IV1=c("A","A","B","B"),
+                 IV2=c("1","2","1","2"),
+                 means=c(10,18,5,7))
+
+g6 <- data.frame(IV1=c("A","A","B","B"),
+                 IV2=c("1","2","1","2"),
+                 means=c(5,10,5,10))
+
+g7 <- data.frame(IV1=c("A","A","B","B"),
+                 IV2=c("1","2","1","2"),
+                 means=c(2,12,5,9))
+  
+g8 <- data.frame(IV1=c("A","A","B","B"),
+                 IV2=c("1","2","1","2"),
+                 means=c(5,10,10,5))
+
+#put them together 
+all_graphs<-rbind(g1,g2,g3,g4,g5,g6,g7,g8)
+
+#add type column  
+type <- c(rep("~1, ~2, ~1x2",4),
+          rep("1, ~2, ~1x2",4),
+          rep("1, ~2, 1x2",4),
+          rep("1, 2, ~1x2",4),
+          rep("1, 2, 1x2",4),
+          rep("~1, 2, ~1x2",4),
+          rep("~1, 2, 1x2",4),
+          rep("~1, ~2, 1x2",4))
+
+type<-as.factor(type)
+
+all_graphs <- cbind(all_graphs,type)
+
+#graph
+ggplot(all_graphs,aes(x=IV1, y=means, group=IV2, color=IV2))+
+  geom_point()+
+  geom_line()+
+  theme_classic()+
+  facet_wrap(~type,nrow=2)+
+  theme(legend.position="top")
+
+```
+
+
 4. In the conceptual section of this lab we used an R simulation to find the family-wise type I error rate for a simple factorial design with 2 independent variables. Use an R simulation to find the family-wise type I error rate for a factorial design with 3 independent variables. (3 points)
+Independence: 
+```{r}
+library(tibble)
+library(dplyr)
+
+#simulation for a factorial design with 3 independent variables
+save_sim<-tibble()
+
+for(i in 10000){
+  n <- 12
+  factorial_data <- tibble(A = factor(rep(c("L1","L2"), each = n)),
+                           B = factor(rep(rep(c("L1","L2"), each = n/2),2)),
+                           C = factor(rep(c("L1","L2"), n)),
+                           DV = rnorm(n*2,0,1))
+  
+  output<-summary(aov(DV~A*B*C,data=factorial_data))
+  
+  sim_tibble<-tibble(p_vals=output[[1]]$`Pr(>F)`[1:7],
+                     effect=c("A","B","C","AxB","AxC","BxC","AxBxC"),
+                     sim=rep(i,7))
+  
+  save_sim<-rbind(save_sim,sim_tibble)
+}
+
+#the family-wise type I error rate
+type_I_errors<-save_sim%>%
+  filter(p_vals < .05)%>%
+  group_by(sim)%>%
+  count()
+
+dim(type_I_errors)[1]/10000
+```
+
