--- a/Lab7.Rmd
+++ b/Lab7.Rmd
@@ -111,7 +111,7 @@ The two-way interaction between Congruency and Posture was not significant, F(1,
 
 
 3. In chapter 10 of Crump et al. (2018), there is a discussion of patterns of main effects and interactions that can occur in a 2x2 design, which represents perhaps the simplest factorial design. There are 8 possible outcomes discussed https://crumplab.github.io/statistics/more-on-factorial-designs.html#looking-at-main-effects-and-interactions. Examples of these 8 outcomes are shown in two figures, one with bar graphs, and one with line graphs. Reproduce either of these figures using ggplot2. (3 points)
-Independence: 10
+Independence: 5
 ```{r}
 #data for 8 possibilities
 g1 <- data.frame(IV1=c("A","A","B","B"),
@@ -175,23 +175,32 @@ ggplot(all_graphs,aes(x=IV1, y=means, group=IV2, color=IV2))+
 
 
 4. In the conceptual section of this lab we used an R simulation to find the family-wise type I error rate for a simple factorial design with 2 independent variables. Use an R simulation to find the family-wise type I error rate for a factorial design with 3 independent variables. (3 points)
-Independence: 
+Independence: 90
 ```{r}
+#first method: using the rbinom() function
+sims<-rbinom(10000,7,0.05)
+length(sims[sims>0])/10000
+
+#second method: simulation for a factorial design with 3 IVs
 library(tibble)
 library(dplyr)
 
-#simulation for a factorial design with 3 independent variables
+#empty tibble
 save_sim<-tibble()
 
-for(i in 10000){
+#conduction loop to simulate the null
+for(i in 1:10000){
+  
   n <- 12
   factorial_data <- tibble(A = factor(rep(c("L1","L2"), each = n)),
                            B = factor(rep(rep(c("L1","L2"), each = n/2),2)),
                            C = factor(rep(c("L1","L2"), n)),
                            DV = rnorm(n*2,0,1))
-  
+ 
+  #compute ANOVa
   output<-summary(aov(DV~A*B*C,data=factorial_data))
   
+  #save p-values for each effect
   sim_tibble<-tibble(p_vals=output[[1]]$`Pr(>F)`[1:7],
                      effect=c("A","B","C","AxB","AxC","BxC","AxBxC"),
                      sim=rep(i,7))
