redo bonus question

--- a/Lab8.Rmd
+++ b/Lab8.Rmd
@@ -12,12 +12,11 @@ knitr::opts_chunk$set(echo = TRUE)
 1. Consider a 2x2 design. Assume the DV is measured from a normal distribution with mean 0, and standard deviation 1. Assume that the main effect of A causes a total shift of .5 standard deviations of the mean between the levels. Assume that level 1 of B is a control, where you expect to measure the standard effect of A. Assume that level 2 of B is an experimental factor intended to reduce the effect of A by .25 standard deviations.
 
 A. create a ggplot2 figure that depicts the expected results from this design (2 points)
-
+Independence: 50
 ```{r}
 #load libraries
 library(tibble)
 library(ggplot2)
-library(patchwork)
 
 # define 2-factor score model
 grand_mean <- 0
@@ -44,35 +43,37 @@ for(i in 1:length(A)){
 
 knitr::kable(model_data)
 
-# generate plots
-bar_graph <- ggplot(model_data,
-                    aes(y=DV,
-                        x=as.factor(IVA),
-                        fill=as.factor(IVB)))+
-  geom_bar(stat='identity', position='dodge')
-
-line_graph <- ggplot(model_data,
-                     aes(y=DV,
-                         x=IVA,
-                         linetype=as.factor(IVB)))+
-  geom_line()+
-  geom_point()
-
-(bar_graph/line_graph)
+# generate a bar graph
+ggplot(model_data, aes(y=DV,
+                       x=as.factor(IVA),
+                       fill=as.factor(IVB)))+
+       geom_bar(stat='identity', position='dodge')
 ```
 
-Conduct simulation-based power analyses to answer the questions.
-
-
-B. How many subjects are needed to detect the main effect of A with power = .8? (2 points)
 
 ```{r}
-# N per group
-N <- 57 
+##Alternative solution for Question A
 
+model_data<-tibble(IVA=c(1,1,2,2),
+                   IVB=c(1,2,1,2),
+                   DV=c(0,0,.5,.25))
+
+ggplot(model_data, aes(y=DV,
+                       x=IVA,
+                       linetype=as.factor(IVB)))+
+       geom_line()+
+       geom_point()
+```
+
+Conduct a simulation-based power analysis to answer the questions.
+
+B. How many subjects are needed to detect the main effect of A with power = .8? (2 points)
+Independence: 80
+```{r}
+# N per condition selected by trial and error 
+N <- 58 
 A_pvalue <- c()
-B_pvalue <- c()
-AB_pvalue <- c()
+
 for(i in 1:1000){
   IVA <- rep(rep(c("1","2"), each=2),N)
   IVB <- rep(rep(c("1","2"), 2),N)
@@ -85,50 +86,75 @@ for(i in 1:1000){
 
   aov_results <- summary(aov(DV~IVA*IVB, sim_df))
   A_pvalue[i]<-aov_results[[1]]$`Pr(>F)`[1]
-  B_pvalue[i]<-aov_results[[1]]$`Pr(>F)`[2]
-  AB_pvalue[i]<-aov_results[[1]]$`Pr(>F)`[3]
 }
 
 length(A_pvalue[A_pvalue<0.05])/1000
+```
 
-length(B_pvalue[B_pvalue<0.05])/1000
 
-length(AB_pvalue[AB_pvalue<0.05])/1000
+```{r}
+##Alternative solution for Question B
+N <- 58 
+A_pvalue <- c()
 
+for(i in 1:1000){
+  sim_df<-tibble(
+    IVA = rep(rep(c("1","2"), each=2),N),
+    IVB = rep(rep(c("1","2"), 2),N),
+    DV = rnorm(4*N, c(0,0,.5,.25),1)
+  )
+  aov_results <- summary(aov(DV~IVA*IVB, sim_df))
+  
+  A_pvalue[i]<-aov_results[[1]]$`Pr(>F)`[1]
+}
+
+length(A_pvalue[A_pvalue<0.05])/1000
 ```
 
 C. How many subjects are needed to detect the interaction effect with power = .8? (2 points)
-
+Independence: 90
 ```{r}
-N <- 510 
-
-A_pvalue <- c()
-B_pvalue <- c()
+#N per condition selected by trial and error
+N <- 500 
 AB_pvalue <- c()
-for(i in 1:1000){
-  IVA <- rep(rep(c("1","2"), each=2),N)
-  IVB <- rep(rep(c("1","2"), 2),N)
-  DV <- c(replicate(N,c(rnorm(1,0,1), # means A1B1
-                        rnorm(1,0,1), # means A1B2
-                        rnorm(1,.5,1), # means A2B1
-                        rnorm(1,.25,1)  # means A2B2
-          )))
-  sim_df <- data.frame(IVA,IVB,DV)
 
+for(i in 1:1000){
+  sim_df<-tibble(
+    IVA = rep(rep(c("1","2"), each=2),N),
+    IVB = rep(rep(c("1","2"), 2),N),
+    DV = rnorm(4*N, c(0,0,.5,.25),1)
+  )
   aov_results <- summary(aov(DV~IVA*IVB, sim_df))
-  A_pvalue[i]<-aov_results[[1]]$`Pr(>F)`[1]
-  B_pvalue[i]<-aov_results[[1]]$`Pr(>F)`[2]
+  
   AB_pvalue[i]<-aov_results[[1]]$`Pr(>F)`[3]
 }
 
-length(A_pvalue[A_pvalue<0.05])/1000
-
-length(B_pvalue[B_pvalue<0.05])/1000
-
-length(AB_pvalue[AB_pvalue<0.05])/1000
+length(AB_pvalue[AB_pvalue<0.05])/1000    
 ```
 
 
 Bonus point question:
 
 B1. Create a power curve showing how power for the interaction effect in this example is influenced by number of subjects. Choose a range of N from 25 to 800 (per cell) and run a simulation-based power analysis for increments of 25 subjects. Then plot the results using ggplot2 (2 points).
+Independence:90
+```{r}
+
+
+
+N <- 500 
+AB_pvalue <- c()
+
+for(i in 1:1000){
+  sim_df<-tibble(
+    IVA = rep(rep(c("1","2"), each=2),N),
+    IVB = rep(rep(c("1","2"), 2),N),
+    DV = rnorm(4*N, c(0,0,.5,.25),1)
+  )
+  aov_results <- summary(aov(DV~IVA*IVB, sim_df))
+  
+  AB_pvalue[i]<-aov_results[[1]]$`Pr(>F)`[3]
+}
+
+length(AB_pvalue[AB_pvalue<0.05])/1000    
+```
+
